--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "chart.js": "^4.3.0",
+    "electron": "^26.1.0",
     "modbus-serial": "^8.0.11",
     "serialport": "^11.0.0"
-  },
-  "devDependencies": {
-    "electron": "^25.3.0"
   },
   "description": ""
 }
