--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "electron",
+  "name": "wirelesscharger",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "keywords": [],
-  "author": "",
+  "author": "Muhammad Haris Mumtaz <mhmumtaz2c-@my.cityu.edu.hk",
   "license": "ISC",
   "dependencies": {
-    "chart.js": "^4.3.0",
-    "electron": "^26.1.0",
-    "modbus-serial": "^8.0.13",
-    "serialport": "^11.0.0"
+    "chart.js": "latest",
+    "electron": "latest",
+    "modbus-serial": "latest"
   },
-  "description": ""
+  "description": "Data Visualisation for wireless charger"
 }
