--- a/package.json
+++ b/package.json
@@ -3,15 +3,33 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "keywords": [],
-  "author": "Muhammad Haris Mumtaz <mhmumtaz2c-@my.cityu.edu.hk",
+  "author": "Muhammad Haris Mumtaz <mhmumtaz2c-@my.cityu.edu.hk>",
   "license": "ISC",
   "dependencies": {
     "chart.js": "latest",
+    "modbus-serial": "latest"
+  },
+  "devDependencies": {
+    "electron-builder": "latest",
+    "chart.js": "latest",
     "electron": "latest",
     "modbus-serial": "latest"
+  },
+  "build": {
+    "appId": "com.yourname.yourapp",
+    "win": {
+      "target": "nsis",
+      "icon": "icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   },
   "description": "Data Visualisation for wireless charger"
 }
